Improvements in javascript controller